--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -931,8 +931,7 @@
           margin-left: -.5rem;
         }
 
-        .img-responsive,
-        .video-responsive {
+        .img-responsive {
           background: $light-color;
           border: .05rem solid #2f2a47;
           border-radius: 50%;
@@ -991,8 +990,7 @@
         }
       }
 
-        .img-responsive,
-        .video-responsive {
+        .img-responsive {
           border-radius: 50%;
         }
       }
