--- a/styles/_feed.scss
+++ b/styles/_feed.scss
@@ -146,7 +146,7 @@
         display: flex;
         flex-wrap: nowrap;
         gap: .25rem;
-        margin-bottom: -.25rem;
+        margin-bottom: .25rem;
         overflow: auto hidden;
         padding-bottom: .25rem;
 
@@ -259,7 +259,7 @@
             display: flex;
             flex-wrap: nowrap;
             gap: .25rem;
-            margin-bottom: -.25rem;
+            margin-bottom: .25rem;
             overflow: auto hidden;
             padding-bottom: .25rem;
           }
