--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -145,6 +145,10 @@
     &.poaps {
       background: linear-gradient(to top, rgba(#5E58A5, 0) 0%, rgba(#5E58A5, .35) 200%);
     }
+
+    &.article {
+      background: linear-gradient(to top, rgba(#000, 0) 0%, rgba(#000, .15) 200%);
+    }
   }
 
   .modal-header {
@@ -688,34 +692,13 @@
 
   // Modal Article
   &.modal-article-container {
-    background: #fff;
-    border-radius: .5rem;
-    box-sizing: border-box;
-    height: calc(100vh - 3rem);
-    max-width: $size-md;
-    margin: auto;
-    padding: 2rem 4rem;
-    overflow-y: auto;
-    position: relative;
-    width: 100%;
-
-    @media screen and (max-width: $size-sm) {
-      padding: 1.5rem;
-
-      @supports (height: 100dvh) {
-        height: calc(100dvh - .5rem);
-        width: calc(100dvw - .5rem);
-      }
-    }
-
-
-    .modal-article-title {
+    .article-title {
       font-size: 1.2rem;
-      margin-bottom: 1.2rem;
+      margin-bottom: 1rem;
     }
 
-    .modal-article-action {
-      margin-bottom: 1.2rem;
+    .article-meta {
+      margin-bottom: 1rem;
     }
 
     img {
@@ -724,18 +707,18 @@
     }
 
     h1 {
-      font-size: 1.2rem;
-      font-weight: 800;
+      font-size: 1rem;
+      font-weight: 700;
     }
 
     h2 {
-      font-size: 1rem;
-      font-weight: 800;
+      font-size: .8rem;
+      font-weight: 700;
     }
 
     h3 {
-      font-size: .8rem;
-      font-weight: 800;
+      font-size: .6rem;
+      font-weight: 700;
     }
 
     li {
