--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -784,7 +784,7 @@
     height: 80vh;
     gap: 2rem;
     max-width: $size-xl;
-    padding: 1rem;
+    padding: 0 1rem;
     width: 100%;
 
     @media screen and (max-width: $size-md) {
