--- a/styles/_feed.scss
+++ b/styles/_feed.scss
@@ -146,7 +146,7 @@
         display: flex;
         flex-wrap: nowrap;
         gap: .25rem;
-        margin-bottom: .25rem;
+        margin-bottom: -.25rem;
         overflow: auto hidden;
         padding-bottom: .25rem;
 
@@ -166,6 +166,7 @@
 
       .feed-content-img {
         cursor: pointer;
+        margin-top: .25rem;
         max-width: 16rem;
 
         .img-responsive,
@@ -179,7 +180,7 @@
         }
       }
 
-      .feed-medias {
+      .feed-media {
         width: 100%;
         margin-top: .25rem;
       }
@@ -264,7 +265,7 @@
             display: flex;
             flex-wrap: nowrap;
             gap: .25rem;
-            margin-bottom: .25rem;
+            margin-bottom: -.25rem;
             overflow: auto hidden;
             padding-bottom: .25rem;
           }
