--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -31,17 +31,19 @@
     }
   }
 }
-.dashboard-menu{
+
+.dashboard-menu {
   display: flex;
   flex-direction: column;
   gap: .5rem;
   box-shadow: none;
   background: transparent;
   padding: 0;
-  .menu-item{
+
+  .menu-item {
     width: 100%;
     padding: 0;
-    font-size: 1rem;
+    font-size: .75rem;
     font-weight: 500;
     margin: .25rem 0;
     display: flex;
