--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -818,7 +818,7 @@
     display: flex;
     height: 80vh;
     gap: 2rem;
-    max-width: $size-xl;
+    max-width: $size-2x;
     padding: 0 1rem;
     width: 100%;
 
