--- a/styles/spectre/_dropdowns.scss
+++ b/styles/spectre/_dropdowns.scss
@@ -28,8 +28,7 @@
   }
 
   &.active .menu,
-  .dropdown-toggle:focus+.menu,
-  .menu:hover {
+  .dropdown-toggle:focus+.menu {
     display: flex;
   }
 
