--- a/styles/spectre/_layout.scss
+++ b/styles/spectre/_layout.scss
@@ -446,3 +446,10 @@
     display: block !important;
   }
 }
+
+.justify-between {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
