--- a/styles/spectre/utilities/_position.scss
+++ b/styles/spectre/utilities/_position.scss
@@ -40,6 +40,11 @@
   justify-content: center;
 }
 
+.justify-between {
+  display: flex;
+  justify-content: space-between;
+}
+
 // Spacing
 @include margin-variant(auto, auto);
 
