--- a/styles/spectre/_animations.scss
+++ b/styles/spectre/_animations.scss
@@ -11,11 +11,11 @@
 @keyframes slide-down {
   0% {
     opacity: 0;
-    transform: translateY(-$unit-2);
+    transform: translateY(-$unit-4);
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY($layout-spacing-sm);
   }
 }
 
@@ -26,7 +26,7 @@
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY($layout-spacing-sm);
   }
 }
 
