--- a/styles/spectre/_animations.scss
+++ b/styles/spectre/_animations.scss
@@ -15,7 +15,7 @@
   }
   100% {
     opacity: 1;
-    transform: translateY($layout-spacing-sm);
+    transform: translateY(0);
   }
 }
 
@@ -26,7 +26,7 @@
   }
   100% {
     opacity: 1;
-    transform: translateY($layout-spacing-sm);
+    transform: translateY(0);
   }
 }
 
