chore: modal philand updates

--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -51,6 +51,7 @@
     gap: .5rem;
   }
 }
+
 .web3-profile-base {
   padding: .5rem .5rem 1rem .5rem;
   position: sticky;
@@ -1003,13 +1004,13 @@
           width: 3.2rem;
         }
 
-      &.space-item {
-        .img-container {
-          border: .05rem solid #ff9800;
-          box-shadow: 0 0 0 .1rem #ffe3ba;
-       
+        &.space-item {
+          .img-container {
+            border: .05rem solid #ff9800;
+            box-shadow: 0 0 0 .1rem #ffe3ba;
+
+          }
         }
-      }
 
         .img-responsive {
           border-radius: 50%;
@@ -1118,7 +1119,7 @@
           object-fit: cover;
           width: 100%;
 
-          & + .rss-item-title {
+          &+.rss-item-title {
             font-size: .7rem;
           }
         }
@@ -1246,6 +1247,7 @@
       }
     }
   }
+
   // Scores Widget
   .profile-widget-scores {
     position: relative;
@@ -1282,7 +1284,7 @@
           position: absolute;
           width: 100%;
         }
-    
+
         &:focus,
         &:hover {
           .profile-widget-hover {
@@ -1297,7 +1299,7 @@
           font-weight: 800;
           gap: .4rem;
         }
-    
+
         .widget-score-subtitle {
           font-size: .6rem;
         }
@@ -1354,7 +1356,9 @@
   }
 
   // Webacy Widget
-  .profile-widget-webacy {
+  // Phi Land Widget
+  .profile-widget-webacy,
+  .profile-widget-philand {
     background: linear-gradient(45deg, rgba(#556DD0, .1) 0, rgba(#fff, 1) 25%);
 
     .widget-score-title {
@@ -1404,6 +1408,7 @@
   .profile-widget-gitcoin {
     background: linear-gradient(45deg, rgba(#4A47D3, .15) 0, rgba(#fff, 1) 25%);
     cursor: pointer;
+
     .widget-trait-list {
       display: flex;
       flex-wrap: wrap;
